# v8unpack

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  VersionInfo.rc  appveyor.yml  bash_completion.sh  snapcraft.yaml  v8unpack.cbp  v8unpack.nsi  v8unpack.nuspec  v8unpack.workspace  v8unpack.wxs
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
debian/: README.Debian  README.source  changelog  control  copyright  rules
rpm/: readme.md  v8unpack.spec
src/: V8File.cpp  V8File.h  main.cpp  version.h
src/v8unpack/: V8File.h  main.cpp
src/v8versions/: VersionInfo.rc  main.cxx  versions.cxx  versions.hxx
test/: run.sh
testlibc/: main.c  testlibc.cbp
v8container/: DeflateStream.cpp  DeflateStream.h  Doxyfile  InflateStream.cpp  InflateStream.h  Makefile  V8Raw.cpp  V8Raw.h  v8container.cbp  v8container.cpp  v8container.h
